<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_arrowback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_arrowback" />

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_home" />

        <TextView
            android:id="@+id/my_jobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/hind_siliguri_bold"
            android:text="Career Development"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_arrowback" />

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/search_view_border"
            android:contextClickable="false"
            android:elevation="10dp"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:queryBackground="@color/transparent"
            android:queryHint="Search programme"
            app:iconifiedByDefault="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_jobs" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_nav">

        <ScrollView
            android:id="@+id/scrollView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/searchBar">


            <androidx.cardview.widget.CardView
                android:id="@+id/programme1"
                style="@style/jobs_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/careerUpdateImage"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="updateImage1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/idol_producer" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/careerUpdateImage">

                        <TextView
                            android:id="@+id/job_name1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/hind_siliguri_bold"
                            android:text="Idol Producer"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/salary1"
                            style="@style/myJobs_detail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:backgroundTint="#F0F0EE"
                            android:drawableLeft="@drawable/icon_time"
                            android:drawablePadding="8dp"
                            android:text="@string/rm_3000_rm_8000_a_month"
                            android:textColor="#555452"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/job_name1" />

                        <TextView
                            android:id="@+id/jobType1"
                            style="@style/myJobs_detail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/full_time"
                            app:layout_constraintStart_toStartOf="@+id/salary1"
                            app:layout_constraintTop_toBottomOf="@+id/salary1" />

                        <TextView
                            android:id="@+id/jobShift1"
                            style="@style/myJobs_detail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/monday_to_friday"
                            app:layout_constraintStart_toStartOf="@+id/jobType1"
                            app:layout_constraintTop_toBottomOf="@+id/jobType1" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>