<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/job_card"
            style="@style/jobs_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/hind_siliguri_bold"
                    android:text="Customer Service Associate"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/salary_card"
                    style="@style/jobs_detail_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_name">

                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/salary_layout_color">

                        <ImageView
                            android:id="@+id/icon_salary1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7px"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/icon_salary" />

                        <TextView
                            android:id="@+id/salary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="1dp"
                            android:fontFamily="@font/hind_siliguri_bold"
                            android:text="@string/rm_3000_a_month"
                            android:textColor="@color/salary_text_color"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/icon_salary1"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/type_card"
                    style="@style/jobs_detail_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/salary_card"
                    app:layout_constraintTop_toBottomOf="@id/salary_card">

                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/jobsType_layout_color">

                        <ImageView
                            android:id="@+id/icon_jobType1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7px"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/icon_work" />

                        <TextView
                            android:id="@+id/type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="1dp"
                            android:fontFamily="@font/hind_siliguri_bold"
                            android:text="Full-Time"
                            android:textColor="@color/jobsType_text_color"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/icon_jobType1"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/shift_card"
                    style="@style/jobs_detail_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/type_card"
                    app:layout_constraintTop_toBottomOf="@id/type_card">

                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/jobsShift_layout_color">

                        <ImageView
                            android:id="@+id/icon_jobShift1"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:padding="7px"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/icon_time" />

                        <TextView
                            android:id="@+id/shift"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="1dp"
                            android:fontFamily="@font/hind_siliguri_bold"
                            android:text="@string/monday_to_friday"
                            android:textColor="@color/jobsShift_text_color"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/icon_jobShift1"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/posted_time"
                    style="@style/history_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/archivo_narrow_bold"
                    android:text="@string/_1_day_ago"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/shift_card"
                    app:layout_constraintTop_toBottomOf="@id/view_button" />

                <Button
                    android:id="@+id/view_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:fontFamily="@font/hind_siliguri_bold"
                    android:text="Applicants"
                    android:textColor="@android:color/white"
                    app:icon="@drawable/icon_employer"
                    app:layout_constraintEnd_toStartOf="@+id/edit_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shift_card" />

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/hind_siliguri_bold"
                    android:text="Edit"
                    android:textColor="@android:color/white"
                    app:icon="@drawable/icon_edit"
                    app:layout_constraintBottom_toBottomOf="@+id/view_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view_button"
                    app:layout_constraintTop_toTopOf="@+id/view_button" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>